--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Great+Vibes&display=swap');
 @import "tailwindcss";
 
 :root {
@@ -93,6 +93,12 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 600;
   line-height: 1.2;
   color: #2C2420;
+}
+
+/* Great Vibes Script Font */
+.font-script {
+  font-family: 'Great Vibes', cursive !important;
+  font-weight: 400 !important;
 }
 
 /* Smooth transitions */
