--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -1,4 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Great+Vibes&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+
+/* Baby Dandelia Custom Font */
+@font-face {
+  font-family: 'Baby Dandelia';
+  src: url('/fonts/Baby Dandelia Demo.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
 @import "tailwindcss";
 
 :root {
@@ -95,9 +104,9 @@ h1, h2, h3, h4, h5, h6 {
   color: #2C2420;
 }
 
-/* Great Vibes Script Font */
+/* Baby Dandelia Script Font */
 .font-script {
-  font-family: 'Great Vibes', cursive !important;
+  font-family: 'Baby Dandelia', 'Dancing Script', cursive !important;
   font-weight: 400 !important;
 }
 
